--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/johnotander/get-macs",
   "devDependencies": {
+    "is-blank": "0.0.1",
     "mocha": "^2.0.1"
   },
   "dependencies": {
