--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "get-macs",
   "version": "1.0.0",
   "description": "Get all MAC address in a string.",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
+  "author": {
+    "name": "John Otander",
+    "email": "johnotander@gmail.com",
+    "url": "johnotander.com"
   },
+  "main": "index.js",
+  "files": [
+    "index.js"
+  ],
   "scripts": {
-    "test": "mocha test"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -17,17 +22,17 @@
     "mac",
     "mac-address",
     "valid",
-    "validation"
+    "validation",
+    "get"
   ],
-  "author": "John Otander <johnotander@gmail.com> (http://johnotander.com/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/johnotander/get-macs/issues"
   },
   "homepage": "https://github.com/johnotander/get-macs",
   "devDependencies": {
-    "is-blank": "0.0.1",
-    "mocha": "^2.0.1"
+    "ava": "^0.2.0",
+    "is-blank": "0.0.1"
   },
   "dependencies": {
     "mac-regex": "^1.0.0"
